# lib-asmkraken

./: .gitignore  CMakeLists.txt
include/: Toggleable.h  asmkraken.h
include/asm/: MidFunctionHook.h  Patch.h  asm.h
include/mem/: Pointer.h  mem.h
include/mem/scanning/: PatternScanMatch.h  PatternScanRule.h  PatternScanner.h
src/asm/: MidFunctionHook.cpp  Patch.cpp  asm.cpp
src/mem/: Pointer.cpp  Pointer.h  mem.cpp
src/mem/scanning/: PatternScanContext.cpp  PatternScanContext.h  PatternScanMatch.cpp  PatternScanMeta.cpp  PatternScanMeta.h  PatternScanRule.cpp  PatternScanner.cpp
